Bug 152301 - slow opening of Options > Application Colors
Summary: slow opening of Options > Application Colors
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.3.6.2 release
Hardware: All All
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0
Keywords: perf
: 112532 (view as bug list)
Depends on:
Blocks: Options-Dialog-Colours
  Show dependency treegraph
 
Reported: 2022-11-29 16:18 UTC by stragu
Modified: 2022-12-12 11:03 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2022-11-29 16:18:34 UTC
When opening Options > LibreOffice > Application Colors, there is a significant delay displaying the settings (when compared to other parts of the Options dialog).

If current master is run from the command line on Ubuntu 20.04, dozens of Gtk-CRITICAL errors GLib-GObject-WARNINGs are displayed, of the type:

(soffice:199086): GLib-GObject-WARNING **: 16:21:38.842: invalid cast from 'GtkImage' to 'GtkLabel'
(soffice:199086): Gtk-CRITICAL **: 16:21:38.842: gtk_label_set_label: assertion 'GTK_IS_LABEL (label)' failed

However, the issue is also in Windows, so unlikely related.

Happens in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 7830ecc2e4e5dd264517c6554078fa807ff1fceb
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Display was already slow in:

Version: 6.3.6.2
Build ID: 2196df99b074d8a661f4036fca8fa0cbfa33a497
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded

But also with gen VCL:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 7830ecc2e4e5dd264517c6554078fa807ff1fceb
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

and kf5 VCL:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

and on Windows:

Version: 7.4.3.2 (x64) / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Comment 1 Julien Nabet 2022-11-29 21:24:31 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 2 Julien Nabet 2022-11-30 13:10:26 UTC
Caolán: I think you might be interested in this one considering the gtk traces provided by Stéphane.

code pointer: cui/uiconfig/ui/colorconfigwin.ui
Comment 3 Caolán McNamara 2022-12-07 12:17:23 UTC
https://gerrit.libreoffice.org/c/core/+/143775 should fix those warnings FWIW
Comment 4 Commit Notification 2022-12-07 13:26:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1545e3a5ba940e2bd8d1f8a29a22e29e1e326f6d

Related: tdf#152301 fix gtk warnings

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-12-07 22:58:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/62ae7be5aa20499c45e6f1b3f1dd2729483625b0

Related: tdf#152301 cache color widget width

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-12-07 22:58:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d327a3bf45808fc7575b7fffa681314e50b0adf8

Resolves: tdf#152301 allow using an existing ColorListBox to speed init

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2022-12-07 23:00:43 UTC
Its hard to call a perf issue "fixed", so they are my least favourite topics, but I find it pretty reasonable now though.
Comment 8 stragu 2022-12-08 13:32:41 UTC
Thanks Caolán. Even though it is not instant like other tabs, it is not slow enough to be cumbersome anymore, and is on par with how Language Settings > Languages lags a bit.

Fix verified in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ad085990b8073a122ac5222e5220f8f1d6826dcf
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 9 Gabor Kelemen (Collabora) 2022-12-12 11:03:11 UTC
*** Bug 112532 has been marked as a duplicate of this bug. ***