Related: tdf#152301 cache color widget width

Change-Id: I0030980e2259715aa1fa624eb0ee82d5dfc51810
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143778
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>